--- a/obs/data/locale/en-US.ini
+++ b/obs/data/locale/en-US.ini
@@ -355,6 +355,9 @@ Basic.Settings.General.Theme="Theme"
 Basic.Settings.General.Language="Language"
 Basic.Settings.General.WarnBeforeStartingStream="Show confirmation dialog when starting streams"
 Basic.Settings.General.WarnBeforeStoppingStream="Show confirmation dialog when stopping streams"
+Basic.Settings.General.Snapping="Source Alignment Snapping"
+Basic.Settings.General.ScreenSnapping="Snap Sources to edge of screen"
+Basic.Settings.General.SnapDistance="Snap Sensitivity"
 
 # basic mode 'stream' settings
 Basic.Settings.Stream="Stream"
