UI: Warn if streaming audio/video bitrate is too high
Allows the user to know that the maximum bitrate limit for a streaming
service is being enforced.

--- a/obs/data/locale/en-US.ini
+++ b/obs/data/locale/en-US.ini
@@ -382,6 +382,8 @@ Basic.Settings.Output.Simple.RecordingQuality.Stream="Same as stream"
 Basic.Settings.Output.Simple.RecordingQuality.Small="High Quality, Medium File Size"
 Basic.Settings.Output.Simple.RecordingQuality.HQ="Indistinguishable Quality, Large File Size"
 Basic.Settings.Output.Simple.RecordingQuality.Lossless="Lossless Quality, Tremendously Large File Size"
+Basic.Settings.Output.Simple.Warn.VideoBitrate="Warning: The video bitrate will be set to %1, which is the upper limit for the current streaming service.  If you're sure you want to go above %1, enable advanced encoder options and uncheck \"Enforce streaming service bitrate limits\"."
+Basic.Settings.Output.Simple.Warn.AudioBitrate="Warning: The audio bitrate will be set to %1, which is the upper limit for the current streaming service.  If you're sure you want to go above %1, enable advanced encoder options and uncheck \"Enforce streaming service bitrate limits\"."
 Basic.Settings.Output.Simple.Warn.Encoder="Warning: Recording with a software encoder at a different quality than the stream will require extra CPU usage if you stream and record at the same time."
 Basic.Settings.Output.Simple.Warn.Lossless="Warning: Lossless quality generates tremendously large file sizes!  Lossless quality can use upward of 7 gigabytes of disk space per minute at high resolutions and framerates.  Lossless is not recommended for long recordings unless you have a very large amount of disk space available."
 Basic.Settings.Output.Simple.Warn.Lossless.Msg="Are you sure you want to use lossless quality?"
