obs-ffmpeg: Add FFmpeg NVENC encoder

--- a/plugins/obs-ffmpeg/data/locale/en-US.ini
+++ b/plugins/obs-ffmpeg/data/locale/en-US.ini
@@ -1,6 +1,20 @@
 FFmpegOutput="FFmpeg Output"
 FFmpegAAC="FFmpeg Default AAC Encoder"
 Bitrate="Bitrate"
+Preset="Preset"
+UseCBR="Use CBR"
+KeyframeIntervalSec="Keyframe Interval (seconds, 0=auto)"
+
+NVENC.Use2Pass="Use Two-Pass Encoding"
+NVENC.Preset.default="Default"
+NVENC.Preset.hq="High Quality"
+NVENC.Preset.hp="High Performance"
+NVENC.Preset.bd="Bluray"
+NVENC.Preset.ll="Low-Latency"
+NVENC.Preset.llhq="Low-Latency High Quality"
+NVENC.Preset.llhp="Low-Latency High Performance"
+NVENC.Tier="Tier"
+NVENC.Level="Level"
 
 FFmpegSource="Media Source"
 LocalFile="Local File"
@@ -26,6 +40,7 @@ ColorRange="YUV Color Range"
 ColorRange.Auto="Auto"
 ColorRange.Partial="Partial"
 ColorRange.Full="Full"
+
 
 MediaFileFilter.AllMediaFiles="All Media Files"
 MediaFileFilter.VideoFiles="Video Files"
