Update translations from Crowdin

--- a/obs/data/locale/ca-ES.ini
+++ b/obs/data/locale/ca-ES.ini
@@ -339,6 +339,7 @@ Basic.Settings.Output.Simple.Warn.Encoder="Advertiment: Gravar amb un software c
 Basic.Settings.Output.Simple.Warn.Lossless="Advertiment: La qualitat sense pèrdues genera mides d'arxiu gegantines!  La qualitat sense pèrdues pot utilitzar un total de 7 gigabytes d'espai de disc per minut a alta resolució i FPS.  Aquesta qualitat no és recomanable per a enregistraments llargs llevat que tingui una gran quantitat d'espai de disc disponible."
 Basic.Settings.Output.Simple.Warn.Lossless.Msg="Esteu segur que voleu utilitzar qualitat sense pèrdues?"
 Basic.Settings.Output.Simple.Warn.Lossless.Title="Advertiment de qualitat sense pèrdues!"
+Basic.Settings.Output.Simple.Warn.MultipleQSV="Advertència: No es poden utilitzar diversos descodificadors QSV separats en transmetre i enregistrar al mateix temps. Per transmetre i engrestriar al mateix temps, si us plau modifiqueu-los, ja sigui el codificador de gravació o el codificador de transmissió."
 Basic.Settings.Output.Simple.Encoder.Software="Programari (x264)"
 Basic.Settings.Output.Simple.Encoder.Hardware.QSV="Maquinari (QSV)"
 Basic.Settings.Output.Simple.Encoder.Hardware.NVENC="Maquinari (NVENC)"
