--- a/obs/data/locale/de-DE.ini
+++ b/obs/data/locale/de-DE.ini
@@ -339,6 +339,7 @@ Basic.Settings.Output.Simple.Warn.Encoder="Warnung: Mit einem Software-Encoder i
 Basic.Settings.Output.Simple.Warn.Lossless="Warnung: Verlustfreie Qualität erzeugt enorm große Dateien!  Verlustfreie Qualität, kann mehr als 7 Gigabyte Speicherplatz pro Minute, bei hohen Auflösungen und Frameraten in Anspruch nehmen.  Verlustfrei ist für lange Aufnahmen nicht empfohlen, es sei denn, Sie haben eine sehr große Menge an Speicherplatz zur Verfügung."
 Basic.Settings.Output.Simple.Warn.Lossless.Msg="Sind Sie sicher, dass Sie verlustfreie Qualität verwenden möchten?"
 Basic.Settings.Output.Simple.Warn.Lossless.Title="Verlustfreie Qualität-Warnung!"
+Basic.Settings.Output.Simple.Warn.MultipleQSV="Achtung: Sie können nicht mehrere separate QSV-Encoder beim streamen und aufnehmen gleichzeitig verwenden.  Wenn Sie zur gleichen Zeit streamen und aufnehmen möchten, dann ändern Sie bitte entweder den Aufnahme-Encoder oder den Stream-Encoder."
 Basic.Settings.Output.Simple.Encoder.Software="Software (x264)"
 Basic.Settings.Output.Simple.Encoder.Hardware.QSV="Hardware (QSV)"
 Basic.Settings.Output.Simple.Encoder.Hardware.NVENC="Hardware (NVENC)"
@@ -435,7 +436,7 @@ Basic.Settings.Advanced.Audio.BufferingTime="Audio Pufferungszeit"
 Basic.Settings.Advanced.Video.ColorFormat="Farbformat"
 Basic.Settings.Advanced.Video.ColorSpace="YUV-Farbmatrix"
 Basic.Settings.Advanced.Video.ColorRange="YUV Farbbereich"
-Basic.Settings.Advanced.Video.ColorRange.Partial="Teilweise"
+Basic.Settings.Advanced.Video.ColorRange.Partial="Begrenzt"
 Basic.Settings.Advanced.Video.ColorRange.Full="Voll"
 Basic.Settings.Advanced.StreamDelay="Stream-Verzögerung"
 Basic.Settings.Advanced.StreamDelay.Duration="Dauer (Sekunden)"
