--- a/obs/data/locale/eu-ES.ini
+++ b/obs/data/locale/eu-ES.ini
@@ -339,6 +339,7 @@ Basic.Settings.Output.Simple.Warn.Encoder="Oharra: Transmisioak duen kalitatea e
 Basic.Settings.Output.Simple.Warn.Lossless="Oharra: Galerarik gabeko kalitateak  neurri izugarri handiko fitxategiak sortzen ditu! Galerarik gabeko kalitateak minutuko 7 gigabytetik gorako tokia erabili dezake diskoan bereizmen eta fotograma-emari handietan. Galerarik gabeko kalitatea ez dago gomendatua grabazio luzeetarako disko toki eskuragarri oso handi bat ez baduzu."
 Basic.Settings.Output.Simple.Warn.Lossless.Msg="Ziur zaude galerarik gabeko kalitatea erabili nahi duzula?"
 Basic.Settings.Output.Simple.Warn.Lossless.Title="Galerarik gabeko kalitateaz oharra!"
+Basic.Settings.Output.Simple.Warn.MultipleQSV="Kontuz: Ezin dituzu QSV kodeatzaile ugari bananduta erabili aldiberean jariotu eta grabatzerakoan.  Aldiberean jariotu eta grabatzea nahi baduzu, mesedez aldatu bietako bat, grabaketa kodeatzailea edo jariotze kodeatzailea."
 Basic.Settings.Output.Simple.Encoder.Software="Softwarea (x264)"
 Basic.Settings.Output.Simple.Encoder.Hardware.QSV="Hardwarea (QSV)"
 Basic.Settings.Output.Simple.Encoder.Hardware.NVENC="Hardwarea (NVENC)"
