--- a/obs/data/locale/fr-FR.ini
+++ b/obs/data/locale/fr-FR.ini
@@ -339,6 +339,7 @@ Basic.Settings.Output.Simple.Warn.Encoder="Attention : enregistrer via un encode
 Basic.Settings.Output.Simple.Warn.Lossless="Attention: la qualité sans perte génère des fichiers de taille énorme ! Elle peut utiliser jusqu'à  7 gigaoctets d'espace disque par minute pour de hautes résolutions et fréquences d'image. Cette qualité n'est pas recommandée pour de longs enregistrements à moins d'avoir énormément d'espace disque disponible."
 Basic.Settings.Output.Simple.Warn.Lossless.Msg="Êtes-vous certain de vouloir utiliser la qualité sans perte ?"
 Basic.Settings.Output.Simple.Warn.Lossless.Title="Avertissement de qualité sans perte"
+Basic.Settings.Output.Simple.Warn.MultipleQSV="Attention : Vous ne pouvez pas utiliser plusieurs encodeurs QSV distincts lorsque vous streamez et enregistrez en même temps. Si vous voulez streamer et enregistrer en même temps, veuillez changer soit l'encodeur d'enregistrement, soit l'encodeur de streaming."
 Basic.Settings.Output.Simple.Encoder.Software="Logiciel (x264)"
 Basic.Settings.Output.Simple.Encoder.Hardware.QSV="Matériel (QSV)"
 Basic.Settings.Output.Simple.Encoder.Hardware.NVENC="Matériel (NVENC)"
