--- a/obs/data/locale/hr-HR.ini
+++ b/obs/data/locale/hr-HR.ini
@@ -339,6 +339,7 @@ Basic.Settings.Output.Simple.Warn.Encoder="Upozorenje: Snimanje sa softverskim e
 Basic.Settings.Output.Simple.Warn.Lossless="Upozorenje: Kvalitet bez gubitka stvara izričito velike datoteke! Kvalitet bez gubitka može koristiti više od 7 gigabajta prostora na disku po minutu pri visokim rezolucijama i framerate-om. Kvalitet bez gubitka nije preporučen za duže snimanje osim ako imate veliku količinu slobodnog prostora na disku."
 Basic.Settings.Output.Simple.Warn.Lossless.Msg="Da li ste sigurni da želite koristiti kvalitet bez gubitka?"
 Basic.Settings.Output.Simple.Warn.Lossless.Title="Upozorenje za kvalitet bez gubitka!"
+Basic.Settings.Output.Simple.Warn.MultipleQSV="Upozorenje: Ne možete koristi više odvojenih QSV enkodera kada emitujete i snimate u isto vreme. Ako želite da emitujete i snimate u isto vreme, molim promenite ili enkoder snimanja ili enkoder emitovanja."
 Basic.Settings.Output.Simple.Encoder.Software="Softverski (x264)"
 Basic.Settings.Output.Simple.Encoder.Hardware.QSV="Mašinski (QSV)"
 Basic.Settings.Output.Simple.Encoder.Hardware.NVENC="Mašinski (NVENC)"
