--- a/obs/data/locale/hu-HU.ini
+++ b/obs/data/locale/hu-HU.ini
@@ -339,6 +339,7 @@ Basic.Settings.Output.Simple.Warn.Encoder="Figyelem: A streamtől eltérő minő
 Basic.Settings.Output.Simple.Warn.Lossless="Figyelem: A veszteségmentes minőséggel történő felvétel hatalmas fájlméretet generál. Ezzel a minőséggel percenként akár 7 gigabájt adatot is generálhat nagy felbontáson és képkockasebességen. Ez az eljárás nem ajánlott hosszú felvételekhez, kivéve ha hatalmas lemezterület áll rendelkezésre."
 Basic.Settings.Output.Simple.Warn.Lossless.Msg="Biztos benne, hogy veszteségmentes minőséget kíván használni?"
 Basic.Settings.Output.Simple.Warn.Lossless.Title="Veszteségmentes minőség figyelem!"
+Basic.Settings.Output.Simple.Warn.MultipleQSV="Figyelem: Nem használható több különálló QSV kódoló streamelésre és felvételre egyidejűleg. Ha ön egyidejűleg kíván streamet és felvételt készíteni, akkor váltsa le a felvevő vagy a stream kódolóját."
 Basic.Settings.Output.Simple.Encoder.Software="Szoftver (x264)"
 Basic.Settings.Output.Simple.Encoder.Hardware.QSV="Hardver (QSV)"
 Basic.Settings.Output.Simple.Encoder.Hardware.NVENC="Hardver (NVENC)"
