--- a/obs/data/locale/sr-SP.ini
+++ b/obs/data/locale/sr-SP.ini
@@ -339,6 +339,7 @@ Basic.Settings.Output.Simple.Warn.Encoder="Упозорење: Снимање с
 Basic.Settings.Output.Simple.Warn.Lossless="Упозорење: Квалитет без губитка ствара изричито велике датотеке! Квалитет без губитка може користити више од 7 гигабајта простора на диску по минуту при високим резолуцијама и framerate-ом. Квалитет без губитка није препоручен за дуже снимање осим ако имате велику количину слободног простора на диску."
 Basic.Settings.Output.Simple.Warn.Lossless.Msg="Да ли сте сигурни да желите користити квалитет без губитка?"
 Basic.Settings.Output.Simple.Warn.Lossless.Title="Упозорење за квалитет без губитка!"
+Basic.Settings.Output.Simple.Warn.MultipleQSV="Упозорење: Не можете користити више одвојених QSV енкодера када емитујете и снимате у исто време. Ако желите да емитујете и снимате у исто време, молим промените или енкодер снимања или енкодер емитовања."
 Basic.Settings.Output.Simple.Encoder.Software="Софтверски (x264)"
 Basic.Settings.Output.Simple.Encoder.Hardware.QSV="Машински (QSV)"
 Basic.Settings.Output.Simple.Encoder.Hardware.NVENC="Машински (NVENC)"
