--- a/obs/data/locale/tr-TR.ini
+++ b/obs/data/locale/tr-TR.ini
@@ -8,6 +8,7 @@ Cancel="İptal"
 Close="Kapat"
 Save="Kaydet"
 Discard="Vazgeç"
+Disable="Devre dışı bırak"
 Yes="Evet"
 No="Hayır"
 Add="Ekle"
@@ -38,6 +39,7 @@ Untitled="İsimsiz"
 New="Yeni"
 Duplicate="Çoğalt"
 Enable="Etkinleştir"
+Transition="Geçiş"
 Left="Sol"
 Right="Sağ"
 Top="Üst"
