--- a/obs/data/locale/zh-CN.ini
+++ b/obs/data/locale/zh-CN.ini
@@ -339,6 +339,7 @@ Basic.Settings.Output.Simple.Warn.Encoder="警告: 同时传输流和录像, 并
 Basic.Settings.Output.Simple.Warn.Lossless="警告: 无损质量产生的文件大小非常大! 无损质量在高分辨率和帧速率的情况下可以使用超过7GB的磁盘空间每分钟。 无损不适合长时间录像，除非你有很多可用的磁盘空间。"
 Basic.Settings.Output.Simple.Warn.Lossless.Msg="你确定你想要使用无损质量?"
 Basic.Settings.Output.Simple.Warn.Lossless.Title="无损质量警告!"
+Basic.Settings.Output.Simple.Warn.MultipleQSV="警告: 当同时推流和录像时, 你不能使用多个单独的 QSV 编码器.  如果你想要同时推流和录像, 请更改录像的编码器或者推流的编码器."
 Basic.Settings.Output.Simple.Encoder.Software="软件 (x264)"
 Basic.Settings.Output.Simple.Encoder.Hardware.QSV="硬件 (QSV)"
 Basic.Settings.Output.Simple.Encoder.Hardware.NVENC="硬件 (NVENC)"
