--- a/plugins/mac-vth264/data/locale/tr-TR.ini
+++ b/plugins/mac-vth264/data/locale/tr-TR.ini
@@ -1,5 +1,8 @@
 Bitrate="Bithızı"
+MaxBitrate="Maks bit hızı"
+KeyframeIntervalSec="Anahtarkare Aralığı (saniye, 0=otomatik)"
 Profile="Profil"
 None="(Yok)"
+DefaultEncoder="(Varsayılan Kodlayıcı)"
 
 
