--- a/plugins/obs-ffmpeg/data/locale/ja-JP.ini
+++ b/plugins/obs-ffmpeg/data/locale/ja-JP.ini
@@ -1,5 +1,5 @@
 FFmpegOutput="FFmpeg の出力"
-FFmpegAAC="FFmpeg 既定のAAC エンコーダー"
+FFmpegAAC="FFmpeg 既定のAAC エンコーダ"
 Bitrate="ビットレート"
 Preset="プリセット"
 UseCBR="CBRを使用"
