--- a/plugins/obs-qsv11/data/locale/ru-RU.ini
+++ b/plugins/obs-qsv11/data/locale/ru-RU.ini
@@ -8,4 +8,5 @@ AsyncDepth="Сила асинхронизации"
 Accuracy="Точность"
 Convergence="Конвергенция"
 ICQQuality="Качество ICQ"
+LookAheadDepth="Глубина просмотра наперёд"
 
