--- a/plugins/obs-transitions/data/locale/tr-TR.ini
+++ b/plugins/obs-transitions/data/locale/tr-TR.ini
@@ -1,7 +1,11 @@
 FadeTransition="Soldur"
 CutTransition="Kes"
 SwipeTransition="Kaydır"
+SlideTransition="Kaydır"
+Direction="Yönlendir"
 Direction.Left="Sol"
 Direction.Right="Sağ"
 Direction.Up="Yukarı"
+Direction.Down="Aşağı"
+Color="Renk"
 
