--- a/plugins/win-mf/data/locale/tr-TR.ini
+++ b/plugins/win-mf/data/locale/tr-TR.ini
@@ -1,7 +1,13 @@
 MFAACEnc="Medya Vakfı AAC Kodlayıcısı"
 Bitrate="Bit hızı"
 
+MF.H264.EncoderName="Medya Vakfı H264 Kodlayıcısı"
+MF.H264.Encoder="Kodlayıcı Adı"
+MF.H264.CustomBufsize="İsteğe Bağlı Arabellek Boyutu Kullan"
+MF.H264.BufferSize="Arabellek Boyutu"
 MF.H264.Bitrate="Bithızı"
+MF.H264.MaxBitrate="Maks Bit hızı"
+MF.H264.KeyframeIntervalSec="Anahtarkare Aralığı (saniye, 0=otomatik)"
 MF.H264.Profile="Profil"
 MF.H264.Advanced="Gelişmiş"
 
