--- a/obs/data/locale/pl-PL.ini
+++ b/obs/data/locale/pl-PL.ini
@@ -339,6 +339,7 @@ Basic.Settings.Output.Simple.Warn.Encoder="Ostrzeżenie: Nagrywanie przy użyciu
 Basic.Settings.Output.Simple.Warn.Lossless="Ostrzeżenie: Jakość bezstratna generuje bardzo duże pliki! Przy dużych rozdzielczościach i szybkości klatek rozmiar pliku może sięgać 7GB na minutę nagrania. Jakość ta nie jest zalecana w przypadku długich nagrań, chyba że masz bardzo dużo wolnego miejsca na dysku."
 Basic.Settings.Output.Simple.Warn.Lossless.Msg="Czy na pewno chcesz użyć bezstratnej jakości?"
 Basic.Settings.Output.Simple.Warn.Lossless.Title="Ostrzeżenie o bezstratnej jakości!"
+Basic.Settings.Output.Simple.Warn.MultipleQSV="Ostrzeżenie: Korzystanie z wielu różnych enkoderów QSV do streamowania i nagrywania jest niedozwolone. Jeżeli chcesz streamować i nagrywać w tym samym czasie, zmień ustawienia enkodera nagrywania bądź streamowania."
 Basic.Settings.Output.Simple.Encoder.Software="Programowy (x264)"
 Basic.Settings.Output.Simple.Encoder.Hardware.QSV="Sprzętowy (QSV)"
 Basic.Settings.Output.Simple.Encoder.Hardware.NVENC="Sprzętowy (NVENC)"
