--- a/plugins/mac-avcapture/data/locale/tr-TR.ini
+++ b/plugins/mac-avcapture/data/locale/tr-TR.ini
@@ -4,6 +4,9 @@ UsePreset="Ön Tanımlı Kullan"
 Preset="Ön Tanımlı"
 Buffering="Arabelleğe Almayı Kullan"
 FrameRate="Kare hızı"
+ColorSpace="Renk alanı"
+VideoRange="Video aralığı"
+VideoRange.Partial="Kısmi"
 VideoRange.Full="Tam"
 Auto="Otomatik"
 Unknown="Bilinmiyor (%1)"
