--- a/plugins/obs-ffmpeg/data/locale/tr-TR.ini
+++ b/plugins/obs-ffmpeg/data/locale/tr-TR.ini
@@ -1,7 +1,13 @@
 FFmpegOutput="FFmpeg Çıkışı"
 FFmpegAAC="FFmpeg Varsayılan AAC Kodlayıcı"
 Bitrate="Bit hızı"
+Preset="Ön Tanımlı"
+UseCBR="CBR Kullan"
+KeyframeIntervalSec="Anahtarkare Aralığı (saniye, 0=otomatik)"
 
+NVENC.Preset.default="Varsayılan"
+NVENC.Preset.hq="Yüksek Kalite"
+NVENC.Preset.hp="Yüksek Performans"
 
 FFmpegSource="Ortam Kaynağı"
 LocalFile="Yerel Dosya"
