obs-ffmpeg: Add lossless mode to NVENC encoder

--- a/plugins/obs-ffmpeg/data/locale/en-US.ini
+++ b/plugins/obs-ffmpeg/data/locale/en-US.ini
@@ -13,6 +13,8 @@ NVENC.Preset.bd="Bluray"
 NVENC.Preset.ll="Low-Latency"
 NVENC.Preset.llhq="Low-Latency High Quality"
 NVENC.Preset.llhp="Low-Latency High Performance"
+NVENC.Preset.lossless="Lossless"
+NVENC.Preset.losslesshp="Lossless High Performance"
 NVENC.Level="Level"
 
 FFmpegSource="Media Source"
