obs-ffmpeg: Change NVENC to use rate control
Instead of using an option that turns CBR on/off, adds rate control
methods: VBR, CBR, CQP, Lossless.

This moves lossless from being a preset to being a rate control method.

--- a/plugins/obs-ffmpeg/data/locale/en-US.ini
+++ b/plugins/obs-ffmpeg/data/locale/en-US.ini
@@ -2,8 +2,9 @@ FFmpegOutput="FFmpeg Output"
 FFmpegAAC="FFmpeg Default AAC Encoder"
 Bitrate="Bitrate"
 Preset="Preset"
-UseCBR="Use CBR"
+RateControl="Rate Control"
 KeyframeIntervalSec="Keyframe Interval (seconds, 0=auto)"
+Lossless="Lossless"
 
 NVENC.Use2Pass="Use Two-Pass Encoding"
 NVENC.Preset.default="Default"
@@ -13,8 +14,6 @@ NVENC.Preset.bd="Bluray"
 NVENC.Preset.ll="Low-Latency"
 NVENC.Preset.llhq="Low-Latency High Quality"
 NVENC.Preset.llhp="Low-Latency High Performance"
-NVENC.Preset.lossless="Lossless"
-NVENC.Preset.losslesshp="Lossless High Performance"
 NVENC.Level="Level"
 
 FFmpegSource="Media Source"
