UI: Allow remuxing to/from different formats
Instead of just remuxing from FLV to MP4, allow remuxing to/from the
various container formats that are available.

--- a/obs/data/locale/en-US.ini
+++ b/obs/data/locale/en-US.ini
@@ -138,7 +138,7 @@ LicenseAgreement.Exit="Exit"
 Remux.SourceFile="OBS Recording"
 Remux.TargetFile="Target File"
 Remux.Remux="Remux"
-Remux.RecordingPattern="OBS Recording (*.flv)"
+Remux.OBSRecording="OBS Recording"
 Remux.FinishedTitle="Remuxing finished"
 Remux.Finished="Recording remuxed"
 Remux.FinishedError="Recording remuxed, but the file may be incomplete"
