image-source: Add option to randomize slideshow

--- a/plugins/image-source/data/locale/en-US.ini
+++ b/plugins/image-source/data/locale/en-US.ini
@@ -6,6 +6,7 @@ SlideShow="Image Slide Show"
 SlideShow.TransitionSpeed="Transition Speed (milliseconds)"
 SlideShow.SlideTime="Time Between Slides (milliseconds)"
 SlideShow.Files="Image Files"
+SlideShow.Randomize="Randomize Playback"
 SlideShow.Transition="Transition"
 SlideShow.Transition.Cut="Cut"
 SlideShow.Transition.Fade="Fade"
