--- a/obs/data/locale/en-US.ini
+++ b/obs/data/locale/en-US.ini
@@ -220,7 +220,9 @@ Basic.PropertiesWindow.ConfirmTitle="Settings Changed"
 Basic.PropertiesWindow.Confirm="There are unsaved changes.  Do you want to keep them?"
 Basic.PropertiesWindow.NoProperties="No properties available"
 Basic.PropertiesWindow.AddFiles="Add Files"
+Basic.PropertiesWindow.AddDir="Add Directory"
 Basic.PropertiesWindow.AddURL="Add Path/URL"
+Basic.PropertiesWindow.AddEditableListDir="Add directory to '%1'"
 Basic.PropertiesWindow.AddEditableListFiles="Add files to '%1'"
 Basic.PropertiesWindow.AddEditableListEntry="Add entry to '%1'"
 Basic.PropertiesWindow.EditEditableListEntry="Edit entry from '%1'"
