--- a/obs/data/locale/en-US.ini
+++ b/obs/data/locale/en-US.ini
@@ -360,6 +360,7 @@ Basic.Settings.General.ScreenSnapping="Snap Sources to edge of screen"
 Basic.Settings.General.CenterSnapping="Snap Sources to horizontal and vertical center"
 Basic.Settings.General.SourceSnapping="Snap Sources to other sources"
 Basic.Settings.General.SnapDistance="Snap Sensitivity"
+Basic.Settings.General.RecordWhenStreaming="Automatically record when streaming"
 
 # basic mode 'stream' settings
 Basic.Settings.Stream="Stream"
