obs-transitions: Add 'Luma Wipe' transition

--- a/plugins/obs-transitions/data/locale/en-US.ini
+++ b/plugins/obs-transitions/data/locale/en-US.ini
@@ -11,3 +11,7 @@ Direction.Down="Down"
 SwipeIn="Swipe In"
 Color="Color"
 SwitchPoint="Peak Color Point (percentage)"
+LumaWipeTransition="Luma Wipe"
+LumaWipe.Image="Image"
+LumaWipe.Invert="Invert"
+LumaWipe.Softness="Softness"
