obs-filters: Add scaling/aspect ratio filter
Allows forcing a specific resolution or aspect ratio on a source, with
user-defined sampling.

--- a/plugins/obs-filters/data/locale/en-US.ini
+++ b/plugins/obs-filters/data/locale/en-US.ini
@@ -6,6 +6,7 @@ ScrollFilter="Scroll"
 ChromaKeyFilter="Chroma Key"
 ColorKeyFilter="Color Key"
 SharpnessFilter="Sharpen"
+ScaleFilter="Scaling/Aspect Ratio"
 NoiseGate="Noise Gate"
 Gain="Gain"
 DelayMs="Delay (milliseconds)"
@@ -51,3 +52,10 @@ NoiseGate.HoldTime="Hold Time (milliseconds)"
 NoiseGate.ReleaseTime="Release Time (milliseconds)"
 Gain.GainDB="Gain (dB)"
 StretchImage="Stretch Image (discard image aspect ratio)"
+Resolution="Resolution"
+None="None"
+ScaleFiltering="Scale Filtering"
+ScaleFiltering.Point="Point"
+ScaleFiltering.Bilinear="Bilinear"
+ScaleFiltering.Bicubic="Bicubic"
+ScaleFiltering.Lanczos="Lanczos"
