UI: Add scaling filter options for scene items to UI
Adds scale filtering options to the scene item right-click context menu.

--- a/obs/data/locale/en-US.ini
+++ b/obs/data/locale/en-US.ini
@@ -168,6 +168,13 @@ Basic.DisplayCapture="Display Capture"
 # display context menu
 Basic.Main.PreviewConextMenu.Enable="Enable Preview"
 
+# scale filtering
+ScaleFiltering="Scale Filtering"
+ScaleFiltering.Point="Point"
+ScaleFiltering.Bilinear="Bilinear"
+ScaleFiltering.Bicubic="Bicubic"
+ScaleFiltering.Lanczos="Lanczos"
+
 # deinterlacing
 Deinterlacing="Deinterlacing"
 Deinterlacing.Discard="Discard"
