UI: Add "View" menu to control visibility of UI widgets
Adds a little improvement to quality-of-life, a typical "View" menu with
the ability to show/hide the following (for now):

- Listbox toolbars
- Status bar
- Transitions pane (some people don't really need/use/care about it)

--- a/obs/data/locale/en-US.ini
+++ b/obs/data/locale/en-US.ini
@@ -341,6 +341,13 @@ Basic.MainMenu.Edit.Order.MoveToTop="Move to &Top"
 Basic.MainMenu.Edit.Order.MoveToBottom="Move to &Bottom"
 Basic.MainMenu.Edit.AdvAudio="&Advanced Audio Properties"
 
+# basic mode view menu
+Basic.MainMenu.View="&View
+Basic.MainMenu.View.Toolbars="&Toolbars"
+Basic.MainMenu.View.Toolbars.Listboxes="&Listboxes"
+Basic.MainMenu.View.SceneTransitions="S&cene Transitions"
+Basic.MainMenu.View.StatusBar="&Status Bar"
+
 # basic mode profile/scene collection menus
 Basic.MainMenu.SceneCollection="&Scene Collection"
 Basic.MainMenu.Profile="&Profile"
