UI: Fix locale bug (forgot ending '"' character)

--- a/obs/data/locale/en-US.ini
+++ b/obs/data/locale/en-US.ini
@@ -342,7 +342,7 @@ Basic.MainMenu.Edit.Order.MoveToBottom="Move to &Bottom"
 Basic.MainMenu.Edit.AdvAudio="&Advanced Audio Properties"
 
 # basic mode view menu
-Basic.MainMenu.View="&View
+Basic.MainMenu.View="&View"
 Basic.MainMenu.View.Toolbars="&Toolbars"
 Basic.MainMenu.View.Toolbars.Listboxes="&Listboxes"
 Basic.MainMenu.View.SceneTransitions="S&cene Transitions"
