--- a/plugins/win-dshow/data/locale/en-US.ini
+++ b/plugins/win-dshow/data/locale/en-US.ini
@@ -25,9 +25,9 @@ AudioOutputMode.WaveOut="Output desktop audio (WaveOut)"
 UseCustomAudioDevice="Use custom audio device"
 AudioDevice="Audio Device"
 Buffering="Buffering"
-Buffering.AutoDetect="Auto-Detect (Enable for delayed devices, disable otherwise)"
-Buffering.Enable="Enable (Ensure most accurate video playback)"
-Buffering.Disable="Disable (Play video frames immediately)"
+Buffering.AutoDetect="Auto-Detect"
+Buffering.Enable="Enable"
+Buffering.Disable="Disable"
 Activate="Activate"
 Deactivate="Deactivate"
 FlipVertically="Flip Vertically"
