UI: Allow removing multiple selected scene items

--- a/obs/data/locale/en-US.ini
+++ b/obs/data/locale/en-US.ini
@@ -101,6 +101,7 @@ ConfirmExit.Text="OBS is currently active.  All streams/recordings will be shut 
 # confirm delete dialog box
 ConfirmRemove.Title="Confirm Remove"
 ConfirmRemove.Text="Are you sure you wish to remove '$1'?"
+ConfirmRemove.TextMultiple="Are you sure you wish to remove %1 items?"
 
 # output connect messages
 Output.ConnectFail.Title="Failed to connect"
