UI: Add ability to lock preview
Adds the ability to lock the preview so sources can't be edited.  This
feature is typically used in the case where the user wants to prevent
accidentally clicking and dragging on sources.

--- a/obs/data/locale/en-US.ini
+++ b/obs/data/locale/en-US.ini
@@ -324,6 +324,7 @@ Basic.MainMenu.Edit.Undo="&Undo"
 Basic.MainMenu.Edit.Redo="&Redo"
 Basic.MainMenu.Edit.UndoAction="&Undo $1"
 Basic.MainMenu.Edit.RedoAction="&Redo $1"
+Basic.MainMenu.Edit.LockPreview="&Lock Preview"
 Basic.MainMenu.Edit.Transform="&Transform"
 Basic.MainMenu.Edit.Transform.EditTransform="&Edit Transform..."
 Basic.MainMenu.Edit.Transform.ResetTransform="&Reset Transform"
