win-capture: Add missing game capture "Mode" string

--- a/plugins/win-capture/data/locale/en-US.ini
+++ b/plugins/win-capture/data/locale/en-US.ini
@@ -21,3 +21,4 @@ GameCapture.CaptureOverlays="Capture third-party overlays (such as steam)"
 GameCapture.AntiCheatHook="Use anti-cheat compatibility hook"
 GameCapture.HotkeyStart="Capture foreground window"
 GameCapture.HotkeyStop="Deactivate capture"
+Mode="Mode"
