UI: Add system tray capability
This adds a system tray when enabled. There is also a option to minimize to the system tray when the app is started.

--- a/obs/data/locale/en-US.ini
+++ b/obs/data/locale/en-US.ini
@@ -383,6 +383,8 @@ Basic.Settings.General.SourceSnapping="Snap Sources to other sources"
 Basic.Settings.General.SnapDistance="Snap Sensitivity"
 Basic.Settings.General.RecordWhenStreaming="Automatically record when streaming"
 Basic.Settings.General.KeepRecordingWhenStreamStops="Keep recording when stream stops"
+Basic.Settings.General.SysTrayEnabled="Enable system tray icon"
+Basic.Settings.General.SysTrayWhenStarted="Minimize to system tray when started"
 
 # basic mode 'stream' settings
 Basic.Settings.Stream="Stream"
@@ -549,6 +551,13 @@ Basic.Hotkeys.StopStreaming="Stop Streaming"
 Basic.Hotkeys.StartRecording="Start Recording"
 Basic.Hotkeys.StopRecording="Stop Recording"
 Basic.Hotkeys.SelectScene="Switch to scene"
+
+# system tray
+Basic.SystemTray.Show="Show"
+Basic.SystemTray.Hide="Hide"
+
+# system tray notifications
+Basic.SystemTray.Active="OBS is still active"
 
 # hotkeys that may lack translation on certain operating systems
 Hotkeys.Insert="Insert"
