--- a/UI/data/locale/zh-CN.ini
+++ b/UI/data/locale/zh-CN.ini
@@ -77,13 +77,13 @@ NoNameEntered.Title="请输入一个有效的名称"
 NoNameEntered.Text="您不能使用空白名称。"
 
 ConfirmStart.Title="启动流"
-ConfirmStart.Text="你确定你想要启动流?"
+ConfirmStart.Text="你确定你想要启动流？"
 
-ConfirmStop.Title="停止流?"
-ConfirmStop.Text="你确定你想要停止流?"
+ConfirmStop.Title="停止流？"
+ConfirmStop.Text="你确定你想要停止流？"
 
-ConfirmExit.Title="退出OBS?"
-ConfirmExit.Text="OBS工作中. 所有的流/录像将会停止. 你确定想要退出吗?"
+ConfirmExit.Title="退出OBS？"
+ConfirmExit.Text="OBS工作中. 所有的流/录像将会停止. 你确定想要退出吗？"
 
 ConfirmRemove.Title="确认移除"
 ConfirmRemove.Text="确定要删除 '$1' 吗？"
@@ -126,9 +126,9 @@ Remux.FinishedError="录像已经转封装, 但是文件可能不完整."
 Remux.SelectRecording="选择OBS录像 ..."
 Remux.SelectTarget="选择目标文件 ..."
 Remux.FileExistsTitle="目标文件已存在"
-Remux.FileExists="目标文件存在，你想要替换它吗?"
+Remux.FileExists="目标文件存在，你想要替换它吗？"
 Remux.ExitUnfinishedTitle="转封装在进行中"
-Remux.ExitUnfinished="转封装没有完成, 现在停止可能使目标文件不可用.\n你确定要停止转封装吗?"
+Remux.ExitUnfinished="转封装没有完成, 现在停止可能使目标文件不可用.\n你确定要停止转封装吗？"
 
 UpdateAvailable="版本升级"
 UpdateAvailable.Text="新的版本 %1.%2.%3 已可用。<a href='%4'> 点击这里下载</a>"
@@ -173,10 +173,10 @@ Basic.Main.AddSceneCollection.Text="请输入场景集合的名称"
 
 Basic.Main.RenameSceneCollection.Title="重命名场景集合"
 
-AddProfile.Title="添加档案"
-AddProfile.Text="请输入档案文件的名称"
+AddProfile.Title="添加配置文件"
+AddProfile.Text="请输入配置文件的名称"
 
-RenameProfile.Title="重命名档案"
+RenameProfile.Title="重命名配置文件"
 
 Basic.Main.PreviewDisabled="预览当前已禁用"
 
@@ -264,56 +264,57 @@ Basic.Main.StopStreaming="停止串流"
 Basic.Main.StoppingStreaming="停止推流..."
 Basic.Main.ForceStopStreaming="停止流 (放弃延迟)"
 
-Basic.MainMenu.File="& 文件"
-Basic.MainMenu.File.Export="& 导出"
-Basic.MainMenu.File.Import="& 导入"
-Basic.MainMenu.File.ShowRecordings="显示 & 录像"
-Basic.MainMenu.File.Remux="转&封装 录像"
-Basic.MainMenu.File.Settings="& 设置"
-Basic.MainMenu.File.ShowSettingsFolder="显示设置文件夹"
-Basic.MainMenu.File.ShowProfileFolder="显示档案文件夹"
-Basic.MainMenu.AlwaysOnTop="总是在最前面(&A)"
-Basic.MainMenu.File.Exit="退出(&X)"
+Basic.MainMenu.File="文件 (&F)"
+Basic.MainMenu.File.Export="导出 (&E)"
+Basic.MainMenu.File.Import="导入 (&I)"
+Basic.MainMenu.File.ShowRecordings="显示录像 (&R)"
+Basic.MainMenu.File.Remux="转封装录像 (&M)"
+Basic.MainMenu.File.Settings="设置 (&X)"
+Basic.MainMenu.File.ShowSettingsFolder="打开设置所在路径"
+Basic.MainMenu.File.ShowProfileFolder="打开配置文件所在路径"
+Basic.MainMenu.AlwaysOnTop="窗口置顶 (&A)"
+Basic.MainMenu.File.Exit="退出 (&X)"
 
-Basic.MainMenu.Edit="& 编辑"
-Basic.MainMenu.Edit.Undo="& 撤消"
-Basic.MainMenu.Edit.Redo="& 重做"
-Basic.MainMenu.Edit.UndoAction="& 撤消 $1"
-Basic.MainMenu.Edit.RedoAction="& 重做 $1"
-Basic.MainMenu.Edit.Transform="& 变换"
-Basic.MainMenu.Edit.Transform.EditTransform="& 编辑变换"
-Basic.MainMenu.Edit.Transform.ResetTransform="& 重置变换"
-Basic.MainMenu.Edit.Transform.Rotate90CW="旋转 90 度 CW"
-Basic.MainMenu.Edit.Transform.Rotate90CCW="旋转 90 度 CCW"
+Basic.MainMenu.Edit="编辑 (&E)"
+Basic.MainMenu.Edit.Undo="撤消 (&U)"
+Basic.MainMenu.Edit.Redo="重做 (&R)"
+Basic.MainMenu.Edit.UndoAction="撤消 $1 (&U)"
+Basic.MainMenu.Edit.RedoAction="重做 $1 (&R)"
+Basic.MainMenu.Edit.LockPreview="锁定预览 (&L)"
+Basic.MainMenu.Edit.Transform="变换 (&T)"
+Basic.MainMenu.Edit.Transform.EditTransform="& 编辑变换 (&E)"
+Basic.MainMenu.Edit.Transform.ResetTransform="& 重置变换 (&R)"
+Basic.MainMenu.Edit.Transform.Rotate90CW="顺时针旋转 90 度"
+Basic.MainMenu.Edit.Transform.Rotate90CCW="逆时针旋转 90 度"
 Basic.MainMenu.Edit.Transform.Rotate180="旋转 180 度"
-Basic.MainMenu.Edit.Transform.FlipHorizontal="水平翻转"
-Basic.MainMenu.Edit.Transform.FlipVertical="垂直翻转"
-Basic.MainMenu.Edit.Transform.FitToScreen="& 适配屏幕"
-Basic.MainMenu.Edit.Transform.StretchToScreen="& 拉伸到屏幕"
-Basic.MainMenu.Edit.Transform.CenterToScreen="& 屏幕居中"
-Basic.MainMenu.Edit.Order="& 顺序"
-Basic.MainMenu.Edit.Order.MoveUp="上移"
-Basic.MainMenu.Edit.Order.MoveDown="下移"
-Basic.MainMenu.Edit.Order.MoveToTop="移至顶部"
-Basic.MainMenu.Edit.Order.MoveToBottom="移至底部"
-Basic.MainMenu.Edit.AdvAudio="&高级音频属性"
+Basic.MainMenu.Edit.Transform.FlipHorizontal="水平翻转 (&H)"
+Basic.MainMenu.Edit.Transform.FlipVertical="垂直翻转 (&V)"
+Basic.MainMenu.Edit.Transform.FitToScreen="按比例适配屏幕 (&F)"
+Basic.MainMenu.Edit.Transform.StretchToScreen="拉伸全屏 (&S)"
+Basic.MainMenu.Edit.Transform.CenterToScreen="屏幕居中 (&C)"
+Basic.MainMenu.Edit.Order="顺序 (&O)"
+Basic.MainMenu.Edit.Order.MoveUp="上移 (&U)"
+Basic.MainMenu.Edit.Order.MoveDown="下移 (&D)"
+Basic.MainMenu.Edit.Order.MoveToTop="移至顶部 (&T)"
+Basic.MainMenu.Edit.Order.MoveToBottom="移至底部 (&B)"
+Basic.MainMenu.Edit.AdvAudio="高级音频属性 (&A)"
 
-Basic.MainMenu.View="查看(&V)"
-Basic.MainMenu.View.Toolbars="工具栏(&T)"
-Basic.MainMenu.View.Toolbars.Listboxes="列表框(&L)"
-Basic.MainMenu.View.SceneTransitions="场景过渡(&C)"
-Basic.MainMenu.View.StatusBar="状态栏(&S)"
+Basic.MainMenu.View="查看 (&V)"
+Basic.MainMenu.View.Toolbars="工具栏 (&T)"
+Basic.MainMenu.View.Toolbars.Listboxes="列表框 (&L)"
+Basic.MainMenu.View.SceneTransitions="场景过渡 (&C)"
+Basic.MainMenu.View.StatusBar="状态栏 (&S)"
 
-Basic.MainMenu.SceneCollection="&场景集合"
-Basic.MainMenu.Profile="&档案"
+Basic.MainMenu.SceneCollection="场景集合 (&S)"
+Basic.MainMenu.Profile="配置文件 (&P)"
 
-Basic.MainMenu.Help="& 帮助"
-Basic.MainMenu.Help.Website="访问 &网站"
-Basic.MainMenu.Help.Logs="& 日志文件"
-Basic.MainMenu.Help.Logs.ShowLogs="& 显示日志文件"
-Basic.MainMenu.Help.Logs.UploadCurrentLog="& 上传当前日志文件"
-Basic.MainMenu.Help.Logs.UploadLastLog="& 上传最后一个日志文件"
-Basic.MainMenu.Help.Logs.ViewCurrentLog="& 查看当前日志"
+Basic.MainMenu.Help="帮助 (&H)"
+Basic.MainMenu.Help.Website="访问OBS主页 (&W)"
+Basic.MainMenu.Help.Logs="日志文件 (&L)"
+Basic.MainMenu.Help.Logs.ShowLogs="显示日志文件 (&S)"
+Basic.MainMenu.Help.Logs.UploadCurrentLog="上传当前日志文件 (&C)"
+Basic.MainMenu.Help.Logs.UploadLastLog="上传最后一个日志文件 (&L)"
+Basic.MainMenu.Help.Logs.ViewCurrentLog="查看当前日志 (&V)"
 Basic.MainMenu.Help.CheckForUpdates="检查升级"
 
 Basic.Settings.ProgramRestart="要使这些设置生效，必须重新启动该程序。"
@@ -357,7 +358,7 @@ Basic.Settings.Output.Simple.Warn.VideoBitrate="警告: 视频比特率将设置
 Basic.Settings.Output.Simple.Warn.AudioBitrate="警告: 音频比特率将设置为 %1, 这是当前的流媒体服务的上限值. 如果你确定你想要超过 %1, 启用高级的编码器选项并取消选中\"强制流媒体服务比特率限制\"."
 Basic.Settings.Output.Simple.Warn.Encoder="警告: 同时传输流和录像, 并使用软件编码器编码与流不同的质量, 将会需要额外的CPU使用."
 Basic.Settings.Output.Simple.Warn.Lossless="警告: 无损质量产生的文件大小非常大! 无损质量在高分辨率和帧速率的情况下可以使用超过7GB的磁盘空间每分钟。 无损不适合长时间录像，除非你有很多可用的磁盘空间。"
-Basic.Settings.Output.Simple.Warn.Lossless.Msg="你确定你想要使用无损质量?"
+Basic.Settings.Output.Simple.Warn.Lossless.Msg="你确定你想要使用无损质量？"
 Basic.Settings.Output.Simple.Warn.Lossless.Title="无损质量警告!"
 Basic.Settings.Output.Simple.Warn.MultipleQSV="警告: 当同时推流和录像时, 你不能使用多个单独的 QSV 编码器.  如果你想要同时推流和录像, 请更改录像的编码器或者推流的编码器."
 Basic.Settings.Output.Simple.Encoder.Software="软件 (x264)"
