--- a/UI/data/locale/zh-TW.ini
+++ b/UI/data/locale/zh-TW.ini
@@ -1,6 +1,6 @@
 
-Language="正體中文（臺灣）"
-Region="Taiwan, R.O.C."
+Language="繁體中文"
+Region="Taiwan, Hong Kong, Macau"
 
 OK="確定"
 Apply="套用"
@@ -314,7 +314,7 @@ Basic.MainMenu.Help.Logs="Log 檔案 (&L)"
 Basic.MainMenu.Help.Logs.ShowLogs="顯示 Log (&S)"
 Basic.MainMenu.Help.Logs.UploadCurrentLog="上傳目前 Log 檔 (&C)"
 Basic.MainMenu.Help.Logs.UploadLastLog="上傳上次的 Log 檔 (&L)"
-Basic.MainMenu.Help.Logs.ViewCurrentLog="顯示當前紀錄檔"
+Basic.MainMenu.Help.Logs.ViewCurrentLog="顯示當前紀錄檔 (&V)"
 Basic.MainMenu.Help.CheckForUpdates="檢查更新"
 
 Basic.Settings.ProgramRestart="為了套用新設定，請關閉後重啟。"
