UI: Add front-end API library
Allows manipulating and modifying the front-end via plugins.

--- a/UI/data/locale/en-US.ini
+++ b/UI/data/locale/en-US.ini
@@ -355,6 +355,9 @@ Basic.MainMenu.SceneCollection="&Scene Collection"
 Basic.MainMenu.Profile="&Profile"
 
 # basic mode help menu
+Basic.MainMenu.Tools="&Tools"
+
+# basic mode help menu
 Basic.MainMenu.Help="&Help"
 Basic.MainMenu.Help.Website="Visit &Website"
 Basic.MainMenu.Help.Logs="&Log Files"
