UI: Add reset/close buttons to transform dialog
Adds a reset and close button to the transform dialog.

Closes jp9000/obs-studio#612

--- a/UI/data/locale/en-US.ini
+++ b/UI/data/locale/en-US.ini
@@ -53,6 +53,7 @@ Left="Left"
 Right="Right"
 Top="Top"
 Bottom="Bottom"
+Reset="Reset"
 
 # quick transitions
 QuickTransitions.SwapScenes="Swap Preview/Output Scenes After Transitioning"
