UI: Add reset button to transformation dialog
This adds a reset button to the transform dialog.

--- a/UI/data/locale/en-US.ini
+++ b/UI/data/locale/en-US.ini
@@ -53,6 +53,7 @@ Left="Left"
 Right="Right"
 Top="Top"
 Bottom="Bottom"
+Reset="Reset"
 
 # quick transitions
 QuickTransitions.SwapScenes="Swap Preview/Output Scenes After Transitioning"
@@ -289,6 +290,9 @@ Basic.TransformWindow.BoundsType.ScaleOuter="Scale to outer bounds"
 Basic.TransformWindow.BoundsType.ScaleToWidth="Scale to width of bounds"
 Basic.TransformWindow.BoundsType.ScaleToHeight="Scale to height of bounds"
 Basic.TransformWindow.BoundsType.Stretch="Stretch to bounds"
+
+ConfirmTransformReset.Title="Reset Transform"
+ConfirmTransformReset.Text="Are you sure you want to reset the transformation?"
 
 # no scene warning
 Basic.Main.AddSourceHelp.Title="Cannot Add Source"
