UI: Add option to stop output after specified time
This adds an optional timer to the streaming and recording outputs. After this time is elapsed the outputs are stopped.

--- a/UI/data/locale/en-US.ini
+++ b/UI/data/locale/en-US.ini
@@ -532,6 +532,9 @@ Basic.Settings.Advanced.StreamDelay.Preserve="Preserve cutoff point (increase de
 Basic.Settings.Advanced.StreamDelay.MemoryUsage="Estimated Memory Usage: %1 MB"
 Basic.Settings.Advanced.Network="Network"
 Basic.Settings.Advanced.Network.BindToIP="Bind to IP"
+Basic.Settings.Advanced.Timers="Timers"
+Basic.Settings.Advanced.Timers.Streaming="Stop streaming after (seconds)"
+Basic.Settings.Advanced.Timers.Recording="Stop recording after (seconds)"
 
 # advanced audio properties
 Basic.AdvAudio="Advanced Audio Properties"
